@startuml 23-clases-infraestructura-persistencia
title Infraestructura — persistencia del agregado (infraestructure.ordermanager.persistencia), sus SPI y el planificador de continuación (...programados)
!pragma layout smetana
hide empty members
skinparam classAttributeIconSize 0

package "programados" {
  class PlanificadorContinuacion <<@Component>> {
    -casoUso : CasoUsoContinuarOrden
    -trabajador : TrabajadorContinuacion
    -trabajadores : int  «ordermanager.planificador.trabajadores, por defecto 2»
    +ejecutar()  «@Scheduled fixedDelayString\nordermanager.planificador.intervalo-ms (5000 ms)»
  }
  note right of PlanificadorContinuacion
    Un planificador por pod: cada pasada comprueba
    casoUso.hayTrabajoPendiente() (EXISTS barato) y, si hay,
    despierta hasta N workers con trabajador.trabajar() (los envíos
    que no caben en el pool se descartan — ver 24). El reclamo del
    token con optimistic lock lo hace el propio caso de uso (ver
    17): arbitra igual entre workers del pod que entre pods.
  end note
}

interface "CasoUsoContinuarOrden\n(aplicación — ver 17)" as CasoUsoContinuarOrden
class "TrabajadorContinuacion\n(ver 24)" as TrabajadorContinuacion

package "persistencia" {
  class AdaptadorRepositorioOrden <<@Component>> {
    -ordenes : OrdenJpaRepository
    -mapeadores : Map<TipoOrden, MapeadorProceso>  «indexado por MapeadorProceso::tipo\nal construir el bean (List<MapeadorProceso> inyectado)»
    +crear(OrdenRoot)  «ordenes.save(padre); mapeadorDe(tipo).guardarContexto(proceso)\n(satélite, hija por FK a orden)»
    +cargar(OrdenId) : OrdenRoot  «UN ÚNICO ordenes.findById (foto atómica\nnegocio+ejecución) + mapeadorDe(tipo).rearmar(id, externalId,\nestado, auditoria) — el contexto lo lee CADA mapeador de SU satélite,\nDESPUÉS de la foto: un commit ajeno entre medias ya bumpeó la version\nde la fila leída, y guardar() lo detecta vía candado optimista»
    +guardar(OrdenRoot)  «ordenes.save + mapeadorDe(tipo).guardarContexto(proceso)\n(upsert satélite) + ordenes.flush();\nOptimisticLockingFailureException -> ConcurrenciaOptimistaException»
    +buscarEjecutables(ahora, limite) : List<CandidataOrden>
    +hayEjecutables(ahora) : boolean  «existeCandidata(ahora) > 0»
    +externalIdsFinalizadosAntesDe(corte) : List<ExternalId>
    +purgarPorExternalIds(ids) : long  «sin ON DELETE CASCADE: borrado\nexplícito hijas->padre, ver nota abajo»
    -mapeadorDe(tipo) : MapeadorProceso  «IllegalStateException si no hay\nninguno registrado para el tipo»
  }
  note right of AdaptadorRepositorioOrden
    ÚNICO adaptador de escritura del agregado, 100% genérico en el
    tipo de orden: ya no importa ninguna saga concreta. Despacha por
    TipoOrden a través de la SPI MapeadorProceso en vez de los
    switches entidadSagaDe()/sagaDesde() de antes. Desde la fase 2 del
    refactor, orden y proceso son la MISMA fila (fusión: ya no hay 2
    SELECT separados con la version solo en uno, que bajo READ_COMMITTED
    podían producir una lectura mixta — FSM vieja + ejecución fresca —
    y repetir un paso ya hecho). crear/guardar escriben SIEMPRE orden
    (ahora el padre) antes que la satélite propia del tipo (hija, FK a
    orden) — guardarContexto(proceso) hace el upsert en ELLA, ya no hay
    un CLOB contexto común ni ContextoCodec (cada tipo tiene su tabla,
    ver 24 y 26). ordenes.flush() fuerza el chequeo de version aquí, no
    en el commit de fuera.
    purgarPorExternalIds: sin ON DELETE CASCADE en NINGUNA tabla
    (prohibido, ver CLAUDE.md): ordenIds = ordenes.idsPorExternalIds(ids);
    ordenes.borrarAuditoriaPorIds(ordenIds); CADA mapeador.borrarContexto
    (ordenIds) (todas las satélites, las de otros tipos simplemente no
    matchean); ordenes.borrarPorIds(ordenIds) al final, el padre ya libre
    de FKs de sus hijas (auditoría y satélites, FK orden_id -> orden).
    externalIdsFinalizadosAntesDe/purgarPorExternalIds purgan POR
    TRAMITACIÓN (grupo de órdenes que comparten external_id), no una
    orden suelta: los usan ServicioPurgarAdjuntos/Completadas de
    business.sagas (ver 09-10 y 22), el motor solo expone la
    selección/el borrado genéricos sin conocer "adjuntos" ni
    "datos_negocio".
  end note

  interface MapeadorProceso <<SPI>> {
    +tipo() : TipoOrden
    +estado(Proceso<?>) : String  «columna orden.estado»
    +guardarContexto(Proceso<?>)  «upsert en SU tabla satélite, misma tx»
    +rearmar(id, externalId, estado, auditoria) : Proceso<?>  «lee SU\nsatélite por id (el PK de orden)»
    +borrarContexto(List<UUID> ordenIds)  «DELETE en SU satélite (purga)»
  }
  note right of MapeadorProceso
    Punto de extensión nº2 (persistencia por tipo): una
    implementación por tipo de orden, indexadas por tipo(). Las 4
    implementaciones concretas (SoporteSagaPrincipal/Secundaria1/2/3)
    viven cada una en su propio paquete
    infraestructure.sagas.sagaX.persistencia — ver 24 — con su propio
    JpaRepository sobre su tabla satélite (p. ej.
    proceso_saga_principal, FK a orden Y a datos_negocio — ver 26).
    Ya no hay ProcesoPersistible/desarmar ni un contexto común
    serializado: el contexto de cada tipo es SU tabla relacional, no
    un contrato de persistencia genérico. Por eso esta SPI vive en
    infraestructure.ordermanager (no en business.ordermanager), y la
    dirección infra.sagas -> infra.ordermanager -> business.ordermanager
    es legal.
  end note

  interface DescriptorSoporteOrden <<SPI>> {
    +tipo() : TipoOrden
    +pasoPendiente(estado) : String  «null si ya no avanza»
    +datosManualesObligatorios(estado) : boolean
    +cancelable(estado) : boolean
  }
  note right of DescriptorSoporteOrden
    Punto de extensión nº3 (modelo de lectura de soporte): la usa
    AdaptadorConsultaOrdenesSoporte (ver 24) para derivar el paso
    pendiente/cancelable de (tipo, estado) sin cargar agregados, en
    vez de sus 3 switches FSM de antes. Mismas implementaciones
    SoporteSaga* que MapeadorProceso (una clase implementa las dos
    SPI) — ver 24.
  end note

  interface "OrdenJpaRepository" as OrdenJpa <<JpaRepository>> {
    +findByExternalIdAndTipo(externalId, tipo) : Optional<OrdenEntity>\n«idempotencia de POST /tramitaciones, ver 01»
    +buscarCandidatas(ahora, limite) : List<CandidataFila>  «nativeQuery»
    +existeCandidata(ahora) : int  «nativeQuery, ROWNUM = 1»
    +externalIdsFinalizadosAntesDe(corte) : List<String>
    +idsPorExternalIds(externalIds) : List<UUID>
    +borrarPorIds(ids)
    +borrarAuditoriaPorIds(ids)  «hija proceso_auditoria, antes que\nel padre en purgarPorExternalIds»
    +buscarTicketsPendientes() : List<TicketPendienteFila>
    +ordenesBloqueadas() / ordenesEnEjecucion(ahora)
    +ordenesConTicketPendiente() / buscar(...) / porExternalId(...)
    +resumenDe(tipo, ordenId) : Optional<OrdenResumenFila>
  }
  note right of OrdenJpa
    Es PUBLIC (no package-private): AdaptadorBusquedaTramitacion
    (infraestructure.sagas.sagaprincipal.persistencia, ver 24) lo usa
    directamente para findByExternalIdAndTipo, sin pasar por
    AdaptadorRepositorioOrden — no carga el agregado completo para una
    simple comprobación de existencia. Desde la fusión de la fase 2 ya
    no existe un ProcesoJpaRepository separado: todas las columnas
    (negocio + ejecución) salen de esta MISMA tabla/repo.
  end note
  interface CandidataFila <<projection, package-private>> {
    getOrdenId() / getTipo()
  }

  class OrdenEntity <<@Entity orden>> {
    @Id ordenId : UUID  «@JdbcTypeCode(SqlTypes.CHAR)\nsobre VARCHAR2(36), sin tocar el DDL»
    tipo / externalId / estado : String  «negocio (FSM), fusionado\ndesde proceso en la fase 2»
    prioridad : int  «espejo de OrdenRoot.prioridad().peso(),\nver 14; ordena buscarCandidatas»
    auditoria : List<AuditoriaEntity>  «@ElementCollection\ntabla proceso_auditoria»
    intentos : int
    proximoReintentoEn : Instant
    tokenTrabajador : String
    tokenExpiraEn : Instant
    ticketAbiertoEn : Instant
    completadaEn : Instant  «null = viva; no-null = finalizada (ok o cancelada)»
    ultimoErrorTipo / ultimoErrorMensaje : String  «clase+mensaje del\núltimo fallo de paso, sin stacktrace»
    @Version version : long  «ÚNICA del agregado, ahora protege\nTAMBIÉN el negocio en la misma fila»
    creadaEn / actualizadaEn : Instant  «las aporta el DOMINIO (OrdenRoot,\nver 14): esta entidad solo las transporta a columna»
  }
  class AuditoriaEntity <<@Embeddable>> {
    cuando / quien / accion / detalle
  }

  note bottom of OrdenEntity
    creada_en/actualizada_en las modela y las fija el DOMINIO
    (OrdenRoot.creadaEn/actualizadaEn, ver 14): creadaEn una vez al
    crear la orden, actualizadaEn en CADA mutador con el ahora de su
    operación. Ya NO hay @PrePersist alCrear()/@PreUpdate
    alActualizar() en esta entidad -- lo único que sigue siendo
    mecanismo de infraestructura es la marca transitoria (@Transient)
    nueva, que decide persist() vs merge() (Persistable<UUID>).
    Tablas Oracle: DDL manual en order-manager/db/ (orden.sql,
    proceso_auditoria.sql — un DBA lo aplica a mano, sin Flyway ni
    ddl-auto: none). orden (orden_id PK; negocio: tipo, external_id,
    estado; prioridad NUMBER(10) NOT NULL — metadato de planificación,
    ver 14; ejecución: intentos, proximo_reintento_en,
    token_trabajador, token_expira_en, ticket_abierto_en,
    completada_en, ultimo_error_tipo, ultimo_error_mensaje, version,
    creada_en, actualizada_en) — FUSIÓN de fase 2 de lo que antes eran
    2 tablas (orden + proceso) con FK entre ellas: eliminaba la
    lectura mixta (torn read) de 2 SELECT separados con la version
    solo en uno bajo READ_COMMITTED. El contexto propio de cada tipo
    sigue en su tabla satélite, p. ej. proceso_saga_principal (ver 24
    y 26), ahora FK a orden. Sin índices parciales en Oracle:
    idx_orden_candidatas es funcional COMPUESTO sobre CASE WHEN
    completada_en IS NULL THEN prioridad END DESC, CASE WHEN
    completada_en IS NULL THEN creada_en END, CASE WHEN completada_en
    IS NULL THEN proximo_reintento_en END; idx_orden_intentos indexa
    la bandeja de trabajo/tickets; idx_orden_external_id (antes
    idx_proceso_external_id) sirve la idempotencia de
    POST /tramitaciones.
  end note

  note right of OrdenJpa
    buscarCandidatas (SQL nativo): proximo_reintento_en <= :ahora
    AND completada_en IS NULL AND (token_trabajador IS NULL OR
    token_expira_en <= :ahora) ORDER BY prioridad DESC, creada_en,
    proximo_reintento_en FETCH FIRST :limite ROWS ONLY (usa
    idx_orden_candidatas, ver nota de OrdenEntity). existeCandidata:
    MISMO predicado WHERE (comparten el índice funcional), COUNT(*)
    con ROWNUM = 1 (0 o 1), sin traer filas ni ORDER BY.
    buscarTicketsPendientes: intentos >= 8 AND
    ticket_abierto_en IS NULL AND completada_en IS NULL.
    externalIdsFinalizadosAntesDe (GROUP BY external_id): HAVING
    COUNT(CASE WHEN completada_en IS NULL THEN 1 END) = 0 AND
    MAX(completada_en) < :corte — ninguna orden viva del grupo Y la
    última en terminar es anterior al corte (para las purgas por
    tramitación, ver 09-10 y 22).
  end note
}

PlanificadorContinuacion --> CasoUsoContinuarOrden : hayTrabajoPendiente()
PlanificadorContinuacion --> TrabajadorContinuacion : trabajar() ×N
AdaptadorRepositorioOrden --> OrdenJpa
AdaptadorRepositorioOrden --> MapeadorProceso : despacha por tipo
OrdenJpa ..> CandidataFila
OrdenEntity "1" *-- "n" AuditoriaEntity

PlanificadorContinuacion -[hidden]down- CasoUsoContinuarOrden
CasoUsoContinuarOrden -[hidden]down- AdaptadorRepositorioOrden
MapeadorProceso -[hidden]down- DescriptorSoporteOrden
@enduml
